--- a/ch05/case0501.ipynb
+++ b/ch05/case0501.ipynb
@@ -8,46 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# standard library imports\n",
-    "\n",
-    "# 3rd party library imports\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pingouin as pg\n",
-    "import scipy.stats\n",
-    "import seaborn as sns\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
-    "import warnings\n",
-    "\n",
-    "sns.set()\n",
-    "warnings.simplefilter('ignore', category=FutureWarning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We begin by reading the data and summarizing the variables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('case0501.csv')\n",
-    "df.groupby('Diet').describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,10 +21,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# standard library imports\n",
+    "import warnings\n",
+    "\n",
+    "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pingouin as pg\n",
+    "import scipy.stats\n",
+    "import seaborn as sns\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "sns.set()\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('case0501.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Robustness to Assumptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('Diet').describe()"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is somewhat skewed left, but it does not appear to be serious."
+    "There is only weak evidence agains the assumption of equal variance.  The samples are somewhat skewed left, but it does not appear to be serious."
    ]
   },
   {
@@ -126,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case Study Questions"
+    "## Does lifetime on the 50 kcal/wk (N/R50) diet exceed the lifetime on the 85 kcal/wk (N/N85) diet "
    ]
   },
   {
@@ -135,14 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = smf.ols('Lifetime ~ C(Diet, Treatment(reference=\"N/N85\"))', data=df).fit()\n",
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Does lifetime on the 50 kcal/wk (N/R50) diet exceed the lifetime on the 85 kcal/wk (N/N85) diet "
    ]
   },
   {
@@ -227,6 +222,13 @@
    "source": [
     "There is strong evidence that restricting the dietary intake to 85 kcal/wk (N/N85) changes the expected lifetime over that of mice with no dietary restrictions (NP) ($t_{0.95, 343}$ = 4.065, $p$-value < 0.0001.   We are 95% confident that the true increase in life expectancy is between 2.7 and 7.8 weeks."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
