--- a/ch06/case0601.ipynb
+++ b/ch06/case0601.ipynb
@@ -1,12 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discrimination Against the Handicapped"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do subjects systematically evaluate qualifications differently according to the candidate's handicap?  If so, which handicaps produce the same evaluations?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# standard library imports\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)\n",
     "\n",
     "# 3rd party library imports\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,20 +45,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We begin by reading the data and summarizing the variables."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('case0601.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('case0601.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Robustness to Assumptions"
    ]
   },
   {
@@ -44,13 +67,6 @@
    "outputs": [],
    "source": [
     "df.groupby('Handicap').describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Robustness to Assumptions"
    ]
   },
   {
@@ -101,15 +117,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "args = [grp['Score'] for _, grp in df.groupby('Handicap')]\n",
-    "scipy.stats.f_oneway(*args)"
+    "model = smf.ols('Score ~ Handicap', data=df).fit()\n",
+    "sm.stats.anova_lm(model)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is reasonable evidence that at least one group may be different."
+    "There is moderate evidence that at least one group is different ($F_{3,52} = 4.02, $p$-value = 0.0120)."
    ]
   },
   {
