--- a/ch06/case0602.ipynb
+++ b/ch06/case0602.ipynb
@@ -1,12 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do Female Fish have Pre-Existing Preferences for a Male Trait?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# standard library imports\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter('ignore', category=FutureWarning)\n",
     "\n",
     "# 3rd party library imports\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,29 +29,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('case0602.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by reading the data and summarizing the variables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('case0602.csv')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.describe()"
+    "# Robustness of Assumptions"
    ]
   },
   {
@@ -59,29 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby('Pair')['Length'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fig, axes = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
-    "sns.boxplot(data=df, x='Pair', y='Proportion', ax=axes[0])\n",
-    "sns.boxplot(data=df, x='Pair', y='Length', ax=axes[1])"
+    "_ = sns.boxplot(data=df, x='Pair', y='Proportion', ax=axes[0])\n",
+    "_ = sns.kdeplot(data=df, x='Proportion', hue='Pair', ax=axes[1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(ncols=2, figsize=[12, 6.4])\n",
-    "sns.kdeplot(data=df, x='Proportion', hue='Pair', ax=ax[0])\n",
-    "sns.kdeplot(data=df, x='Length', hue='Pair', ax=ax[1])"
+    "There is strong evidence against the assumption of equal variance."
    ]
   },
   {
