--- a/ch06/case0601.ipynb
+++ b/ch06/case0601.ipynb
@@ -15,13 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import the data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,6 +33,7 @@
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
+    "import statsmodels.stats.multicomp as multi\n",
     "\n",
     "sns.set()"
    ]
@@ -50,7 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('case0601.csv')"
+    "df = pd.read_csv('case0601.csv')\n",
+    "\n",
+    "# the Handicap column has None as items where there was no handicap.  Must\n",
+    "# replace that with a suitable string in order to get that category noticed.\n",
+    "df.loc[df['Handicap'].isnull(), 'Handicap'] = 'None'"
    ]
   },
   {
@@ -117,7 +115,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = smf.ols('Score ~ Handicap', data=df).fit()\n",
+    "model = smf.ols('Score ~ C(Handicap, Treatment(reference=\"None\"))', data=df).fit()\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is only weak evidence that any of the perceived handicaps differ from the control of no handicap (\"None\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sm.stats.anova_lm(model)"
    ]
   },
@@ -125,14 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is moderate evidence that at least one group is different ($F_{3,52} = 4.02, $p$-value = 0.0120)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Display 6.4:  compute the contrast between the wheelchair and crutches mean and the amputee and hearing means.\n"
+    "There is moderate evidence that at least one group is different from the others, however ($F_{4,65}$ = 2.8616, $p$-value = 0.0301)."
    ]
   },
   {
@@ -141,24 +148,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num = ((grp_summary['count'] - 1) * grp_summary['std'] ** 2).sum()\n",
-    "dof = grp_summary['count'].sum() - len(grp_summary)\n",
-    "sp = np.sqrt(num / dof)\n",
-    "print(sp, dof)"
+    "mc = multi.MultiComparison(df['Score'], df['Handicap'])\n",
+    "res = mc.tukeyhsd(alpha=0.05)\n",
+    "print(res.summary())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The coefficients for the linear combination are $C_1 = -\\frac{1}{2}$, $C_2 = \\frac{1}{2}$, $C_3 = -\\frac{1}{2}$, $C_4 = 0$, $C_5 = \\frac{1}{2}$"
+    "As one might have guessed, the strongest evidence of a difference is between Crutches and Hearing ($p$-value = 0.0278)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estimate the linear combination."
+    "# Calculate the comparison of Amputee/Hearing to Crutches/Wheelchair."
    ]
   },
   {
@@ -167,8 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grp_summary['C'] = [-0.5, 0.5, -0.5, 0, 0.5]\n",
-    "grp_summary"
+    "model.params"
    ]
   },
   {
@@ -177,41 +182,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = (grp_summary['mean'] * grp_summary['C']).sum()\n",
-    "g"
+    "r = np.zeros_like(model.params)\n",
+    "r[1] = r[3] = 0.5\n",
+    "r[2] = r[4] = -0.5\n",
+    "model.t_test(r)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find the standard error of the estimate."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "se = sp * np.sqrt((grp_summary['C'] ** 2 / grp_summary['count']).sum())\n",
-    "se"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Construct a 95% confidence interval."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.t.interval(0.95, dof, loc=g, scale=se)"
+    "There is strong evidence of a difference between the average scores of the amputee and hearing groups as compared with the crutches and wheelchair groups ($t_{0.95, 65}$ = -3.192, $p$-value = 0.002).  We are 95% confident that the true difference is between 2.264 and 0.521 points higher for the crutches/wheelchair groups."
    ]
   },
   {
