--- a/ch06/case0602.ipynb
+++ b/ch06/case0602.ipynb
@@ -24,6 +24,8 @@
     "import pandas as pd\n",
     "import scipy.stats\n",
     "import seaborn as sns\n",
+    "import statsmodels.formula.api as smf\n",
+    "import statsmodels.api as sm\n",
     "\n",
     "sns.set()"
    ]
@@ -68,16 +70,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is strong evidence against the assumption of equal variance."
+    "There is strong evidence against the assumption of equal variance.  Can we even go on with ANOVA?  Sure, let's just ignore that."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Are the mice population lifetimes statistically different?  I.e.,\n",
-    "\n",
-    "$\\it{H_0}:  \\mu_{N/N85} = \\mu_{N/R40} = \\mu_{N/R50} = \\mu_{NP} = \\mu_{R/R50} = \\mu_{lopro}$"
+    "$\n",
+    "\\begin{align}\n",
+    "H_0:  \\mu = 0.50 \\\\\n",
+    "H_a:  \\mu \\ne 0.50 \\\\\n",
+    "\\end{align}\n",
+    "$"
    ]
   },
   {
@@ -86,57 +91,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu = summary.loc['mean', 'Lifetime']\n",
-    "\n",
-    "a = np.empty((3, 5))\n",
-    "a[:] = NaN\n",
-    "index = ['Between Groups', 'Within Groups', 'Total']\n",
-    "columns = ['Sum of Squares', 'd.f.', 'Mean Square', 'F Statistic', 'p-value']\n",
-    "dfss = pd.DataFrame(a, columns=columns, index=index)\n",
-    "\n",
-    "dfss.at['Total', 'Sum of Squares'] = ((df.Lifetime - mu) ** 2).sum()\n",
-    "\n",
-    "ssg = [((g.Lifetime - g.Lifetime.mean()) ** 2).sum() for idx, g in df.groupby('Diet')]\n",
-    "dfss.at['Within Groups', 'Sum of Squares'] = sum(ssg)\n",
-    "\n",
-    "ssb = [\n",
-    "    ((g['Lifetime'].mean() - mu) ** 2) * len(g) \n",
-    "    for _, g in df.groupby('Diet')\n",
-    "] \n",
-    "dfss.at['Between Groups', 'Sum of Squares'] = sum(ssb)\n",
-    "\n",
-    "n = len(df)\n",
-    "I = len(df.Diet.unique())\n",
-    "dfss['d.f.'] = [I - 1, n - I, n - 1]\n",
-    "\n",
-    "dfss['Mean Square'] = dfss['Sum of Squares'] / dfss['d.f.']\n",
-    "\n",
-    "dfss.at['Between Groups', 'F Statistic'] = dfss.at['Between Groups', 'Mean Square'] / dfss.at['Within Groups', 'Mean Square']\n",
-    "\n",
-    "dfss.at['Between Groups', 'p-value'] = scipy.stats.f.sf(dfss.at['Between Groups', 'F Statistic'],\n",
-    "                                                        dfss.at['Between Groups', 'd.f.'],\n",
-    "                                                        dfss.at['Within Groups', 'd.f.'])\n",
-    "\n",
-    "dfss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "args = [grp['Lifetime'] for _, grp in df.groupby('Diet')]\n",
-    "scipy.stats.f_oneway(*args)"
+    "res = scipy.stats.ttest_1samp(df['Proportion'], 0.50)\n",
+    "print(res)\n",
+    "print(res.confidence_interval(0.95))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is overwhelming evidence that the populations are different.\n",
-    "\n",
-    "Does reducing from 85 kcal to 50 kcal per week reduce lifespan?"
+    "There is strong evidence that the females spend a far higher proportion of their time with yellow-sword males than with transparent sword males ($t_{0.95, 83}$ = 7.2276, $p$-value < 0.0001).  We are 95% confident that females spent between 58.5% and 65.4% of their time with yellow-sword tails."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Is there evidence of any linear trend?"
    ]
   },
   {
@@ -145,7 +116,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.stats.ttest_ind(df.loc[df.Diet == 'N/N85', 'Lifetime'], df.loc[df.Diet == 'N/R50', 'Lifetime'])\n"
+    "ci = df.groupby('Pair')['Length'].mean() - df.groupby('Pair')['Length'].mean().mean()\n",
+    "ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = ci\n",
+    "g = ci @ df.groupby('Pair')['Proportion'].mean()\n",
+    "n = df.groupby('Pair')['Proportion'].count()\n",
+    "anova_table = sm.stats.anova_lm(model)\n",
+    "sp = np.sqrt(anova_table.loc['Residual', 'sum_sq'])\n",
+    "se = sp * np.sqrt((ci ** 2) @  (1 / n))\n",
+    "t = g / se\n",
+    "dof = n.sum() - len(n)\n",
+    "pvalue = scipy.stats.t.cdf(tvalue, dof)\n",
+    "print(tvalue, pvalue)"
    ]
   },
   {
