Update chapter 9 notebooks

--- a/ch07/case0701.ipynb
+++ b/ch07/case0701.ipynb
@@ -23,22 +23,21 @@
     "# standard library imports\n",
     "\n",
     "# 3rd party library imports\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
     "\n",
-    "sns.set()\n",
-    "\n",
-    "df = pd.read_csv('case0701.csv')"
+    "sns.set()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robustness of Assumptions"
+    "## Inspection and Graphical Display"
    ]
   },
   {
@@ -47,6 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_csv('case0701.csv')\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -65,9 +66,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g  = sns.lmplot(data=df, x='Velocity', y='Distance')\n",
-    "_ = g.ax.set_xlabel(r'Recession Velocity ($km/sec$)')\n",
-    "_ = g.ax.set_ylabel(r'Distance ($Mpc$)')"
+    "fig, ax = plt.subplots()\n",
+    "_ = sns.scatterplot(data=df, x='Velocity', y='Distance', ax=ax)\n",
+    "_ = ax.set_xlabel(r'Recession Velocity ($km/sec$)')\n",
+    "_ = ax.set_ylabel(r'Distance ($Mpc$)')"
    ]
   },
   {
@@ -81,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Is the relationship between distance and velocity of the stars a straight line?"
+    "## Linear Model"
    ]
   },
   {
@@ -90,9 +92,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = smf.ols('Distance ~ Velocity', data=df)\n",
-    "res = model.fit()\n",
-    "res.summary()"
+    "model = smf.ols('Distance ~ Velocity', data=df).fit()\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "sns.regplot(data=df, x='Velocity', y='Distance', ax=ax)\n",
+    "_ = ax.set_xlabel(r'Recession Velocity ($km/sec$)')\n",
+    "_ = ax.set_ylabel(r'Distance ($Mpc$)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Is the relationship between distance and velocity of the stars a straight line?"
    ]
   },
   {
