--- a/ch09/case0901.ipynb
+++ b/ch09/case0901.ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Meat Processing and pH"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When does pH reach 6.0?"
+    "# Effects of Light on Meadowfoam Flowering\n",
+    "\n",
+    "How does light intensity and the timing of the onset of the light treatment affect meadowfoam production?"
    ]
   },
   {
@@ -20,20 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# standard library imports\n",
+    "import pathlib\n",
     "\n",
-    "# 3rd party library\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import t as scipy_stats_t\n",
+    "import scipy.stats\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
-    "from statsmodels.sandbox.regression.predstd import wls_prediction_std\n",
+    "import statsmodels.api as sm\n",
     "\n",
     "sns.set()\n",
     "\n",
-    "df = pd.read_csv('case0702.csv')"
+    "df = pd.read_csv('case0901.csv')"
    ]
   },
   {
@@ -67,14 +61,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sns.lmplot(data=df, x='Time', y='pH')"
+    "fig, ax = plt.subplots()\n",
+    "palette = sns.color_palette(n_colors=2)\n",
+    "_ = sns.scatterplot(data=df, x='Intensity', y='Flowers', hue='Time', palette=palette, ax=ax)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The relationship does not appear to be linear."
+    "The display above appears to support a parallel linear lines model.  Is there evidence of an interaction?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interaction"
    ]
   },
   {
@@ -83,22 +93,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['logtime'] = np.log(df['Time'])\n",
-    "g = sns.lmplot(data=df, x='logtime', y='pH')"
+    "df['early'] = 2 - df['Time']\n",
+    "model_i = smf.ols('Flowers ~ Intensity * early', data=df).fit()\n",
+    "model_i.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A linear relationship appears to be on better ground with a logarithmic transformation of time."
+    "There is only very weak evidence of an interaction between timing and light intensity ($t_{0.95, 20}$ = 0.910, $p$-value = 0.91)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Model"
+    "### Additive"
    ]
   },
   {
@@ -107,23 +118,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = smf.ols('pH ~ logtime', data=df)\n",
-    "results = model.fit()\n",
-    "results.summary()"
+    "model_a = smf.ols('Flowers ~ Intensity + early', data=df).fit()\n",
+    "model_a.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\hat{\\mu}\\{Y|X\\} = 6.9836 - 0.7257 \\cdot \\log X$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# When does pH reach 6.0?"
+    "The additive model looks very good as all $p$-values are very small.  Is there evidence of lack of fit of the additive model compared to the interacting model?"
    ]
   },
   {
@@ -132,17 +135,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = smf.ols('logtime ~ pH', data=df)\n",
-    "results = model.fit()\n",
-    "sf = results.get_prediction({'pH': 6}).summary_frame(alpha=0.05)\n",
-    "np.exp(sf)"
+    "sm.stats.anova_lm(model_a, model_i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We estimate the pH reaches 6.0 after 3.9 hours.  We are 95% confident that pH of 6 is reached between 2.9 and 5.1 hours."
+    "There is extremely weak evidence of a lack of fit to the additive model compared to the interacting model ($F_{1,20}$ = 0.0132, $p$-value = 0.91).   Therefore we settle on the additive model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mu\\{Flowers|Intensity, early\\} = 83.4642 - 0.0405 \\: Intensity + 12.1583 \\: early$"
    ]
   }
  ],
