--- a/ch09/case0902.ipynb
+++ b/ch09/case0902.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Meat Processing and pH"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When does pH reach 6.0?"
+    "# Why do some mammals have large brains for their size?"
    ]
   },
   {
@@ -20,20 +13,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# standard library imports\n",
+    "import pathlib\n",
     "\n",
-    "# 3rd party library\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats import t as scipy_stats_t\n",
+    "import scipy.stats\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
-    "from statsmodels.sandbox.regression.predstd import wls_prediction_std\n",
     "\n",
     "sns.set()\n",
     "\n",
-    "df = pd.read_csv('case0702.csv')"
+    "df = pd.read_csv('case0902.csv')"
    ]
   },
   {
@@ -67,14 +58,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = sns.lmplot(data=df, x='Time', y='pH')"
+    "# reorder columns to show Brain on bottom row\n",
+    "cols = ['Species', 'Body', 'Gestation', 'Litter', 'Brain']\n",
+    "df = df[cols]\n",
+    "\n",
+    "g = sns.PairGrid(df)\n",
+    "g.map_diag(sns.histplot)\n",
+    "g.map_lower(sns.scatterplot)\n",
+    "_ = g.map_upper(sns.kdeplot)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "The relationship does not appear to be linear."
+    "Brain weight, gestation and body weight are skewed, so a logarithmic transformation may be in order."
    ]
   },
   {
@@ -83,15 +81,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['logtime'] = np.log(df['Time'])\n",
-    "g = sns.lmplot(data=df, x='logtime', y='pH')"
+    "df['logbrain'] = np.log(df['Brain'])\n",
+    "df['loggestation'] = np.log(df['Gestation'])\n",
+    "df['logbody'] = np.log(df['Body'])\n",
+    "df['loglitter'] = np.log(df['Litter'])\n",
+    "\n",
+    "cols = ['logbody', 'loggestation', 'loglitter', 'logbrain']\n",
+    "g = sns.PairGrid(df[cols])\n",
+    "g.map_diag(sns.histplot)\n",
+    "g.map_lower(sns.scatterplot)\n",
+    "_ = g.map_upper(sns.kdeplot)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A linear relationship appears to be on better ground with a logarithmic transformation of time."
+    "A clear relationship seems evident between at brain weight and at least body weight and gestation.  The relationship with litter size is less clear.  Gestation and body weight seem to also show a clear relationship."
    ]
   },
   {
@@ -107,42 +113,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = smf.ols('pH ~ logtime', data=df)\n",
-    "results = model.fit()\n",
-    "results.summary()"
+    "model = smf.ols('logbrain ~ logbody + loggestation + loglitter', data=df).fit()\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\hat{\\mu}\\{Y|X\\} = 6.9836 - 0.7257 \\cdot \\log X$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# When does pH reach 6.0?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = smf.ols('logtime ~ pH', data=df)\n",
-    "results = model.fit()\n",
-    "sf = results.get_prediction({'pH': 6}).summary_frame(alpha=0.05)\n",
-    "np.exp(sf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We estimate the pH reaches 6.0 after 3.9 hours.  We are 95% confident that pH of 6 is reached between 2.9 and 5.1 hours."
+    "$\\mu\\{\\log(Brain)|\\log(Body), \\log(Gestation), \\log(Litter)\\} = 0.8548 + 0.571 \\log(Body) + 0.4179 \\log(Gestation) - 0.3101 \\log(Litter)$"
    ]
   }
  ],
