Update chapter 10 notebooks

--- a/ch06/case0601.ipynb
+++ b/ch06/case0601.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspection, Graphical Display, Robustness of Assumptions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,13 +56,6 @@
     "# the Handicap column has None as items where there was no handicap.  Must\n",
     "# replace that with a suitable string in order to get that category noticed.\n",
     "df.loc[df['Handicap'].isnull(), 'Handicap'] = 'None'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Robustness to Assumptions"
    ]
   },
   {
@@ -99,14 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Are any handicap groups different?\n",
-    "\n",
-    "$\n",
-    "\\begin{align}\n",
-    "H_0: &\\: \\mu_{amputee} = \\mu_{crutches} = \\mu_{hearing} = \\mu_{none} = \\mu_{wheelchair} \\\\\n",
-    "H_a: &\\: \\text{at least one} \\: \\mu_i \\ne \\mu_j \\: \\text{for} \\: i, j \\in \\{amputee, crutches, hearing, wheelchair\\} \\\\\n",
-    "\\end{align}\n",
-    "$"
+    "## Linear Model"
    ]
   },
   {
@@ -117,6 +110,20 @@
    "source": [
     "model = smf.ols('Score ~ C(Handicap, Treatment(reference=\"None\"))', data=df).fit()\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Are any handicap groups different?\n",
+    "\n",
+    "$\n",
+    "\\begin{align}\n",
+    "H_0: &\\: \\mu_{amputee} = \\mu_{crutches} = \\mu_{hearing} = \\mu_{none} = \\mu_{wheelchair} \\\\\n",
+    "H_a: &\\: \\text{at least one} \\: \\mu_i \\ne \\mu_j \\: \\text{for} \\: i, j \\in \\{amputee, crutches, hearing, wheelchair\\} \\\\\n",
+    "\\end{align}\n",
+    "$"
    ]
   },
   {
