Update chapter 11 notebooks

--- a/ch09/case0901.ipynb
+++ b/ch09/case0901.ipynb
@@ -52,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.describe()"
+    "pd.options.display.float_format = \"{:.1f}\".format\n",
+    "\n",
+    "df.groupby(['Time', 'Intensity']).aggregate(['mean', 'std'])"
    ]
   },
   {
@@ -149,8 +151,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mu\\{Flowers|Intensity, early\\} = 83.4642 - 0.0405 \\: Intensity + 12.1583 \\: early$"
+    "$\\mu\\{Flowers|Intensity, early\\} = 83.4642 - 0.0405 \\cdot Intensity + 12.1583 \\cdot early$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
